# OOP_Project1_Cpp

OOP_Project_Cpp/: Animal.cpp  Animal.h  Antylopa.cpp  Antylopa.h  CMakeLists.txt  Dandelion.cpp  Dandelion.h  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Hogweed.cpp  Hogweed.h  Human.cpp  Human.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Window.cpp  Window.h  Wolf.cpp  Wolf.h  Wolfberry.cpp  Wolfberry.h  World.cpp  World.h  log.txt  main.cpp
